Fix video on ios (#37)
* Install MM


* remove connect

* remove MM

* Hard Hat Project (#13)

* Add node tests

* Ad wallet connect with block native (#15)

* fix env vars (#16)

* add wallet-connect support (#17)

* initial UI (#18)

* initial front

* jsconfig

* use david's video

* [INIT] Introduce PhysicalToDigital Contract (#19)

* [FEAT] Introduce constant tokenURI (#20)

* adjust deploy script to new contract name (#21)

* Initial mine & enhance logics (#22)

* rainbow wallet added (#23)

* set current stage video url on setStage method (#25)

* [FEAT] Diamond Journey Functions & Journey Control Functions (#26)

* landing page (#29)

* Vanguard Approval redirects to twitter (#33)

* Auto stash before merge of "develop" and "origin/develop"

* [CI] Introduce Github Workflow - Compile & Test & Coverage (#31)

* mobile landing page (#36)

* mobile css

* improve

* try video fix

--- a/frontend/src/pages/LandingPage/LandingPage.scss
+++ b/frontend/src/pages/LandingPage/LandingPage.scss
@@ -1,15 +1,17 @@
 $gray: #636262;
+$light-gray: #7e7d7d;
 
 .landing-page {
   height: 100%;
-  background: black url("../../assets/images/diamond art.png") no-repeat center 100px;
-  background-size: cover;
-  //background-color: black;
+  background: black url("../../assets/images/diamond art.png") no-repeat center top;
+  background-size: auto 120%;
   color: white;
   font-family: monospace;
+  display: flex;
+  flex-direction: column;
 
   header {
-    height: 80px;
+    height: 50px;
     display: flex;
     align-items: flex-start;
     padding: 30px;
@@ -32,26 +34,25 @@ $gray: #636262;
   }
 
   .centered-content {
-    //height: 100%;
+    height: 38%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    //justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
-    //width: 70%;
-    //max-width: 1000px;
-    //margin: 0 auto;
 
     h1 {
-      margin: 50px 0 80px;
+      margin: 20px 0 0;
       font-size: 3em;
       font-weight: normal;
-      //letter-spacing: .1em;
       opacity: 1;
+    }
 
-      span {
-        font-size: 1.2em;
-      }
+    .coming-soon {
+      margin-top: 0;
+      font-size: 2.4em;
+      color: $light-gray;
+      opacity: 0;
+      animation: scale 1.5s ease-in-out infinite;
     }
 
     .password-box {
@@ -63,11 +64,10 @@ $gray: #636262;
 
       input {
         color: $gray;
+        text-align: center;
         background-color: transparent;
-        /* border-bottom: solid 1px gray; */
         outline: none;
         border: none;
-        //border-bottom: solid 1px $gray;
         font-size: 3.6em;
         letter-spacing: .3em;
         width: 230px;
@@ -112,36 +112,52 @@ $gray: #636262;
 
   &.animate {
     .centered-content {
-      .password-box {
-        transition: opacity .5s ease-out;
-        transition-delay: 5s;
+      .coming-soon {
+        transition: opacity 1s ease-out;
+        transition-delay: 6s;
         opacity: 1;
       }
 
-      h1 {
-        transition: opacity .5s ease-out;
-        transition-delay: 2s;
+      .password-box {
+        transition: opacity 1s ease-out;
+        transition-delay: 6s;
         opacity: 1;
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .landing-page {
+    background-size: 160% auto;
+    background-position-y: bottom;
+    header {
+      height: 35px;
+      justify-content: center;
+      padding: 20px 0;
 
       .logo-box {
-        .by-text {
-          transition: opacity .25s ease-out;
-          transition-delay: 4.75s;
-          opacity: 1;
-        }
-
         img {
-          transition: opacity .25s ease-out;
-          transition-delay: 5s;
-          opacity: 1;
+          height: 60px;
         }
       }
+    }
 
-      .bottom-text {
-        transition: opacity .25s ease-out;
-        transition-delay: 6.75s;
-        opacity: 1;
+    .centered-content {
+      h1 {
+        width: 320px;
+        text-align: center;
+        margin: 20px 0 30px;
+        font-size: 2.5em;
+      }
+
+      .react-player {
+        width: 220px !important;
+      }
+
+      .coming-soon {
+        margin-top: 30px;
+        font-size: 2em;
       }
     }
   }
@@ -152,7 +168,7 @@ $gray: #636262;
     transform: scale(1);
   }
   50% {
-    transform: scale(1.03);
+    transform: scale(1.05);
   }
   100% {
     transform: scale(1);
